Use the new --install-deps-from= feature

--- a/master.cfg
+++ b/master.cfg
@@ -329,29 +329,6 @@ build_factory.addStep(MaybeAddArchSteps(name="Should we build",
                        haltOnFailure=True,
                        command=['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo,
                                 'flathub']),
-    steps.ShellCommand(name='updating dependencies',
-                       haltOnFailure=True,
-                       locks=[flatpak_update_lock.access('exclusive')],
-                       command=['python', '-c',
-"""
-import sys, json, re, subprocess
-j = json.loads(re.sub(r'(^|\s)/\*.*?\*/', '', open(sys.argv[1], 'r').read(),
-                      flags=re.DOTALL))
-runtime = j['runtime']
-sdk = j['sdk']
-version = j['runtime-version']
-arch = sys.argv[2]
-platform_ref = '%s/%s/%s' % (runtime, arch, version)
-sdk_ref = '%s/%s/%s' % (sdk, arch, version)
-deps = [platform_ref, sdk_ref]
-for ref in deps:
-  if subprocess.call(['flatpak', 'install', '--user', 'flathub', ref]) != 0:
-      sys.exit(1)
-  if subprocess.call(['flatpak', 'update', '--user', ref]):
-      sys.exit(1)
-""",
-                                util.Interpolate('%(prop:appid)s.json'),
-                                util.Property('arch')]),
     steps.ShellCommand(name='clean up rofiles-fuse',
                        haltOnFailure=True,
                        command='for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true'),
@@ -359,6 +336,7 @@ for ref in deps:
                        haltOnFailure=True,
                        timeout=3000,
                        command=['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
+                                '--user', '--install-deps-from=flathub',
                                 util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
