Read config once and set as property, use it for arch checks
This also changes the specific MaybeAddArchSteps to a more general
MaybeAddSteps that takes an callback.

--- a/master.cfg
+++ b/master.cfg
@@ -239,6 +239,20 @@ def BuildIsOfficial(step):
     repo_uri = step.build.getProperty ('repository', '')
     return repo_uri == flathub_github_uri + appid and branch == 'master'
 
+def ShouldBuildArch(build):
+    arch = build.getProperty ('arch', '')
+    config = build.getProperty ('flathub-config', {})
+
+    if config.has_key("skip-arches"):
+        if arch in config["skip-arches"]:
+            return False
+
+    if config.has_key("only-arches"):
+        if arch not in config["only-arches"]:
+            return False
+
+    return True
+
 flatpak_update_lock = util.WorkerLock("flatpak-update")
 repo_lock = util.MasterLock("repo")
 
@@ -246,42 +260,42 @@ repo_lock = util.MasterLock("repo")
 # what steps, and which workers can execute them.  Note that any particular build will
 # only take place on one worker.
 
-class MaybeAddArchSteps(CompositeStepMixin, steps.BuildStep):
+class ReadConfigStep(steps.BuildStep, CompositeStepMixin):
+    def __init__(self, **kwargs):
+        steps.BuildStep.__init__(self, **kwargs)
 
+    @defer.inlineCallbacks
+    def run(self):
+        flathub_config = {}
+        content = yield self.getFileContentFromWorker("flathub.json")
+        if content != None:
+            flathub_config = json.loads(content)
+        self.setProperty("flathub-config", flathub_config, "flathub.json")
+        defer.returnValue(buildbot.process.results.SUCCESS)
+
+
+class MaybeAddSteps(steps.BuildStep):
     parms = steps.BuildStep.parms + ['steps']
     steps = None
+    predicate = None
 
-    def __init__(self, **kwargs):
+    def __init__(self, predicate, **kwargs):
         for p in self.__class__.parms:
             if p in kwargs:
                 setattr(self, p, kwargs.pop(p))
 
         steps.BuildStep.__init__(self, **kwargs)
+        self.predicate = predicate
 
-    @defer.inlineCallbacks
     def run(self):
-        content = yield self.getFileContentFromWorker("flathub.json")
-        skip = False
-        if content != None:
-            flathub_config = json.loads(content)
-            arch = self.build.getProperty ('arch', '')
-
-            skip_arches = flathub_config.get("skip-arches")
-            only_arches = flathub_config.get("only-arches")
-            if skip_arches is not None and arch in skip_arches:
-                skip = True
-            if only_arches is not None and arch not in only_arches:
-                skip = True
-
-        if skip:
-            defer.returnValue(buildbot.process.results.SKIPPED)
-        else:
+        if self.predicate(self.build):
             self.build.addStepsAfterCurrentStep(self.steps)
-            defer.returnValue(buildbot.process.results.SUCCESS)
+        return buildbot.process.results.SUCCESS
 
 build_factory = util.BuildFactory()
 build_factory.workdir = util.Property('appid')
 build_factory.addSteps([
+    ReadConfigStep(name="Read config"),
     steps.Git(name="checkout manifest",
               repourl=util.Property('repository'),
               mode='incremental', branch='master', submodules=True),
@@ -300,7 +314,8 @@ build_factory.addSteps([
                             util.ShellArg(command=['mkdir', '-p', 'repo/screenshots'])
                         ])
 ])
-build_factory.addStep(MaybeAddArchSteps(name="Should we build",
+build_factory.addStep(MaybeAddSteps(ShouldBuildArch,
+                                    name="Should we build",
                                     steps=[
     steps.ShellCommand(name='set core.parent',
                        hideStepIf=hide_on_success,
