Add new skip-appstream-check property to flathub.json

--- a/master.cfg
+++ b/master.cfg
@@ -357,6 +357,7 @@ build_factory.addStep(MaybeAddSteps(ShouldBuildArch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
                                 'builddir', util.Interpolate('%(prop:appid)s.json')]),
     steps.ShellCommand(name='check for AppStream xml',
+                       doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
                        haltOnFailure=True,
                        command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:appid)s.xml.gz')]),
     steps.ShellCommand(name='check that the right branch was built',
