Drop weird workaround, seems fixed in buildbot 0.9.10

--- a/master.cfg
+++ b/master.cfg
@@ -295,9 +295,7 @@ class MaybeAddSteps(steps.BuildStep):
 def shellArg(commands):
     return util.ShellArg(logfile='stdio', command=commands)
 
-# For whatever reason, each BuilderConfig instance needs its own copy of the factory, because otherwise
-# the ShellArg interpolations seem to get cached and re-used across builders.
-def new_build_factory():
+def create_build_factory():
     build_factory = util.BuildFactory()
     build_factory.workdir = util.Property('appid')
     build_factory.addSteps([
@@ -499,6 +497,8 @@ c['builders'] = []
 
 status_builders = []
 
+build_factory = create_build_factory()
+
 for arch in flathub_arches:
     extra_fb_args = ['--arch', arch]
     if arch == 'x86_64':
@@ -508,7 +508,7 @@ for arch in flathub_arches:
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
                            properties={'arch': arch, 'extra-fb-args': extra_fb_args },
-                           factory=new_build_factory()))
+                           factory=build_factory))
     status_builders.append('build-' + arch)
 c['builders'].append(
     util.BuilderConfig(name='update-repo',
