Clean up the ascii config hackery

--- a/master.cfg
+++ b/master.cfg
@@ -13,24 +13,16 @@ import subprocess, re, json
 import os.path
 from buildbot.steps.worker import CompositeStepMixin
 
+import utils
+
 f = open('config.json', 'r')
-config = json.loads(f.read ())
+config = utils.json_to_ascii(json.loads(f.read ()))
 
 def getConfig(name, default=""):
-    if config.has_key(name):
-        v = config[name]
-        if isinstance(v,int):
-            return v
-        return v.encode('ascii', 'ignore')
-    return default
+    return config.get(name, default)
 
 def getConfigv(name, default=[]):
-    if config.has_key(name):
-        res = []
-        for i in config[name]:
-            res.append(i.encode('ascii', 'ignore'))
-        return res
-    return default
+    return config.get(name, default)
 
 flathub_buildbot_port = getConfig('buildbot-port', 8010)
 flathub_num_master_workers = getConfig('num-master-workers', 4)
@@ -48,7 +40,7 @@ flathub_github_change_secret = getConfig('github-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
 
 f = open('builders.json', 'r')
-worker_config = json.loads(f.read ())
+worker_config = utils.json_to_ascii(json.loads(f.read ()))
 
 ###### Init
 
@@ -112,20 +104,18 @@ for i in range(1,flathub_num_master_workers+1):
 
 for w in worker_config.iterkeys():
     wc = worker_config[w]
-    w = w.encode('ascii', 'ignore')
-    passwd = wc[u'password'].encode('ascii', 'ignore')
+    passwd = wc['password']
     max_builds = None
-    if wc.has_key(u'max-builds'):
+    if wc.has_key('max-builds'):
         max_builds = wc['max-builds']
     c['workers'].append (worker.Worker(w, passwd, max_builds=max_builds))
-    if wc.has_key(u'arches'):
-        for a in wc[u'arches']:
-            a = a.encode('ascii', 'ignore')
+    if wc.has_key('arches'):
+        for a in wc['arches']:
             if not a in flathub_arches:
                 flathub_arches.append(a)
                 flathub_arch_workers[a] = []
             flathub_arch_workers[a].append(w)
-    if wc.has_key(u'update-repo'):
+    if wc.has_key('update-repo'):
         flathub_update_workers.append(w)
 
 
