New builds.json file
This changes how we figure out where to build things, with the
goal being that we can eventually build things from other repos.
For instance, the kde runtime will be in the upstream kde repo.

--- a/master.cfg
+++ b/master.cfg
@@ -14,6 +14,7 @@ import os.path
 from buildbot.steps.worker import CompositeStepMixin
 
 import utils
+import builds
 
 f = open('config.json', 'r')
 config = utils.json_to_ascii(json.loads(f.read ()))
@@ -26,7 +27,6 @@ def getConfigv(name, default=[]):
 
 flathub_buildbot_port = getConfig('buildbot-port', 8010)
 flathub_num_master_workers = getConfig('num-master-workers', 4)
-flathub_github_uri = getConfig('github-uri')
 flathub_buildbot_uri = getConfig('buildbot-uri')
 flathub_upstream_repo = getConfig('flathub-repo')
 flathub_upstream_repo_path = getConfig('flathub-repo-path')
@@ -119,12 +119,20 @@ for w in worker_config.iterkeys():
         flathub_update_workers.append(w)
 
 
+def change_is_official(change):
+    try:
+        info = builds.lookup_by_git(change.repository, change.branch)
+        if info:
+            return info.official
+    except:
+        pass
+    return False
+
 ####### SCHEDULERS
-checkin = schedulers.SingleBranchScheduler(name="checkin",
-                                           treeStableTimer=10,
-                                           change_filter=util.ChangeFilter(branch='master',
-                                                                           project_re=r'^flathub/.*\..*\..*'),
-                                           builderNames=["Build App"])
+checkin = schedulers.AnyBranchScheduler(name="checkin",
+                                        treeStableTimer=10,
+                                        change_filter=util.ChangeFilter(filter_fn=change_is_official),
+                                        builderNames=["Build App"])
 build = schedulers.Triggerable(name="build-all-platforms",
                                builderNames=map(lambda x: "build-" + x, flathub_arches))
 update_repo = schedulers.Triggerable(name="update-repo",
@@ -144,7 +152,7 @@ class AppParameter(util.CodebaseParameter):
 
         util.CodebaseParameter.__init__(self, name=name, label=label,
                                         codebase=codebase,
-                                        branch=util.StringParameter(name="branch", label='branch:', default="master"),
+                                        branch=util.StringParameter(name="branch", label='branch:', default=""),
                                         revision=util.FixedParameter(name="revision", default=""),
                                         repository=util.StringParameter(name="repository", label='repo uri:', default=""),
                                         project=util.FixedParameter(name="project", default=""),
@@ -153,15 +161,34 @@ class AppParameter(util.CodebaseParameter):
     def createSourcestamp(self, properties, kwargs):
         cb = kwargs.get(self.fullName, [])
         branch = cb['branch']
-        app = kwargs.get('appid', 'noapp')[0]
+        buildname = kwargs.get('buildname', None)[0]
         repo_uri = cb['repository']
-        if not repo_uri:
-            repo_uri = flathub_github_uri + app
+        if repo_uri:
+            if '/' in buildname:
+                raise Exception("Can't specify non-empty version and custom git repo at the same time.")
+            # Here, buildname is now always just an id
+            data = builds.lookup_by_git(repo_uri, branch if branch else "master", buildname)
+            # If we specified a custom git uri then the git module name might not be the
+            # app id, so in this case we need to remember the actual app id that
+            # the user specified
+            if buildname:
+                project = 'forced-build-id/%s' % data.id
+            else:
+                project = 'flathub/' + data.id
+        elif buildname:
+            data = builds.lookup_by_name(buildname)
+            project = 'flathub/' + data.id
+            if branch:
+                data.git_branch = branch
+                # We're overriding the branch, so we loose officialness
+                data.official = False
+        else:
+            raise Exception("Must specify either repo uri or buildname")
 
-        return {'project': 'flathub/' + app,
-                'repository': repo_uri,
+        return {'project': project,
+                'repository': data.url,
                 'revision': '',
-                'branch': branch}
+                'branch': data.git_branch}
 
 force = schedulers.ForceScheduler(
     name="force",
@@ -179,9 +206,9 @@ force = schedulers.ForceScheduler(
                                 label="reason:",
                                 required=True, default="force build", size=80),
     properties=[
-        util.StringParameter(name="appid",
-                             label="App:",
-                             required=True)
+        util.StringParameter(name="buildname",
+                             label="Buildname:",
+                             required=False)
     ]
 )
 
@@ -224,13 +251,10 @@ def hide_on_success_or_skipped(results, s):
 
 # Official builds are master branch on the canonical flathub git repo
 def BuildIsOfficial(step):
-    appid = step.build.getProperty ('appid', '')
-    branch = step.build.getProperty ('branch', '')
-    repo_uri = step.build.getProperty ('repository', '')
-    return repo_uri == flathub_github_uri + appid and branch == 'master'
+    return step.build.getProperty ('flathub-official-build', False)
 
 def ShouldBuildArch(build):
-    arch = build.getProperty ('arch', '')
+    arch = build.getProperty ('flathub-arch', '')
     config = build.getProperty ('flathub-config', {})
 
     if config.has_key("skip-arches"):
@@ -287,7 +311,7 @@ def shellArg(commands):
 
 def create_build_factory():
     build_factory = util.BuildFactory()
-    build_factory.workdir = util.Property('appid')
+    build_factory.workdir = util.Property('flathub-id')
     build_factory.addSteps([
         steps.Git(name="checkout manifest",
                   repourl=util.Property('repository'),
@@ -311,20 +335,20 @@ def create_build_factory():
                         shellArg(['ostree', '--repo=parent-repo', 'remote', 'add', '--gpg-import=flathub.gpg', 'upstream', flathub_upstream_repo]),
                         shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
                         # set core.parent
-                        shellArg(['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:appid)s/parent-repo')]),
+                        shellArg(['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:flathub-id)s/parent-repo')]),
                         # pull current revision into parent repo
                         util.ShellArg(logfile='stdio',
                                       flunkOnFailure=False, # TODO: Instead only do this if this is the first build
                                       command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
-                                               util.Interpolate('app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:appid)s.Debug/%(prop:arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:appid)s.Locale/%(prop:arch)s/' + flathub_branch)]),
+                                               util.Interpolate('app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch),
+                                               util.Interpolate('runtime/%(prop:flathub-id)s.Debug/%(prop:flathub-arch)s/' + flathub_branch),
+                                               util.Interpolate('runtime/%(prop:flathub-id)s.Locale/%(prop:flathub-arch)s/' + flathub_branch)]),
                         util.ShellArg(logfile='stdio',
                                       flunkOnFailure=False, # TODO: Instead only do this if this is the first build
                                       command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
-                                               util.Interpolate('runtime/%(prop:appid)s/%(prop:arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:appid)s.Debug/%(prop:arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:appid)s.Locale/%(prop:arch)s/' + flathub_branch)]),
+                                               util.Interpolate('runtime/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch),
+                                               util.Interpolate('runtime/%(prop:flathub-id)s.Debug/%(prop:flathub-arch)s/' + flathub_branch),
+                                               util.Interpolate('runtime/%(prop:flathub-id)s.Locale/%(prop:flathub-arch)s/' + flathub_branch)]),
                         # Add flathub remote
                         util.ShellArg(logfile='stdio',  haltOnFailure=True,
                                       command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
@@ -344,17 +368,17 @@ def create_build_factory():
                              '--user', '--install-deps-from=flathub',
                              util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                              '--default-branch', flathub_branch,
-                             '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
-                             'builddir', util.Interpolate('%(prop:appid)s.json')]),
+                             '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
+                             'builddir', util.Interpolate('%(prop:flathub-manifest)s')]),
                 steps.ShellCommand(
                     name='Check for AppStream xml',
                     doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
                     haltOnFailure=True,
-                    command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:appid)s.xml.gz')]),
+                    command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')]),
                 steps.ShellCommand(
                     name='Check that the right branch was built',
                     haltOnFailure=True,
-                    command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)),
+                    command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
                 steps.ShellSequence(
                     name='Post-build work',
                     commands=[
@@ -373,7 +397,7 @@ def create_build_factory():
                          haltOnFailure=True,
                          doStepIf=BuildIsOfficial,
                          hideStepIf=hide_on_skipped,
-                         masterdest=util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s/%(prop:arch)s-repo.tar'),
+                         masterdest=util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s/%(prop:flathub-arch)s-repo.tar'),
                          blocksize=64*1024),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
@@ -385,7 +409,7 @@ update_repo_factory = util.BuildFactory()
 update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo']))
 for arch in flathub_arches:
     update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
-                                                   mastersrc=util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s/'+arch+'-repo.tar'),
+                                                   mastersrc=util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s/'+arch+'-repo.tar'),
                                                    workerdest=arch+'-repo.tar',
                                                    blocksize=64*1024))
 extract_commands = []
@@ -398,7 +422,7 @@ update_repo_factory.addStep(steps.ShellSequence(name='Extract build results',
 
 update_repo_factory.addSteps([
     steps.MasterShellCommand(name='remove build results from master',
-                             command=['rm', '-rf', util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s')],
+                             command=['rm', '-rf', util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s')],
                              alwaysRun=True),
     steps.ShellSequence(name='Check and prepare repo',
                         commands=[
@@ -445,28 +469,53 @@ update_repo_factory.addSteps([
 def asciiBasename(s):
     return os.path.basename(s).encode('ascii', 'ignore')
 
+@util.renderer
+def computeBuildProperties(props):
+    orig_reason = props.getProperty('reason')
+    repository = props.getProperty('repository')
+    branch = props.getProperty('branch')
+    project = props.getProperty('project')
+    # When you force a build you can get a different app id than the repo module,
+    # we have to save the specified id in the sourcestamps so we can pull it
+    # back out here, so we
+    forced_id = None
+    if project.startswith("forced-build-id/"):
+        forced_id = project[len("forced-build-id/"):]
+    data = builds.lookup_by_git(repository, branch, forced_id)
+    if data.fp_branch:
+        reason = "%s/%s" % (data.id, data.fp_branch)
+    else:
+        reason = data.id
+    return {
+        "flathub-id": data.id,
+        "flathub-manifest": data.get_manifest(),
+        "flathub-branch": data.fp_branch,
+        "flathub-official-build": data.official,
+        "reason": reason,
+        "orig-reason": orig_reason
+    }
+
 build_app_factory = util.BuildFactory()
 build_app_factory.buildClass = ProjectLockBuild
 build_app_factory.addSteps([
-    steps.SetProperties(name="Set app id",
+    steps.SetProperties(name="Set flathub properties",
                         hideStepIf=hide_on_success,
-                        properties={
-                            'appid': util.Transform(asciiBasename, util.Property('project')),
-                            'orig-reason': util.Property('reason'),
-                            'reason': util.Transform(asciiBasename, util.Property('project'))
-                        }),
+                        properties=computeBuildProperties),
     steps.MasterShellCommand(name="Clean up storage on master",
                              hideStepIf=hide_on_success_or_skipped,
                              doStepIf=BuildIsOfficial,
                              haltOnFailure=True,
-                             command=['rm', '-rf', util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s')]),
+                             command=['rm', '-rf', util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s')]),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
                   schedulerNames=['build-all-platforms'],
                   updateSourceStamp=True,
                   waitForFinish=True,
                   set_properties={
-                      'appid' : util.Property('appid'),
+                      'flathub-id' : util.Property('flathub-id'),
+                      'flathub-manifest' : util.Property('flathub-manifest'),
+                      'flathub-branch' : util.Property('flathub-branch'),
+                      'flathub-official-build' : util.Property('flathub-official-build'),
                       'reason' : util.Property('reason')
                   }),
     steps.Trigger(name='Update repository',
@@ -477,7 +526,10 @@ build_app_factory.addSteps([
                   updateSourceStamp=True,
                   waitForFinish=True,
                   set_properties={
-                      'appid' : util.Property('appid'),
+                      'flathub-id' : util.Property('flathub-id'),
+                      'flathub-manifest' : util.Property('flathub-manifest'),
+                      'flathub-branch' : util.Property('flathub-branch'),
+                      'flathub-official-build' : util.Property('flathub-official-build'),
                       'reason' : util.Property('reason')
                   })
 ])
@@ -496,7 +548,7 @@ for arch in flathub_arches:
     c['builders'].append(
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
-                           properties={'arch': arch, 'extra-fb-args': extra_fb_args },
+                           properties={'flathub-arch': arch, 'extra-fb-args': extra_fb_args },
                            factory=build_factory))
     status_builders.append('build-' + arch)
 c['builders'].append(
