Change the way we transfer results and merge to the main repo
Instead of pulling the current version to the build apps and
creating a build with it as parent we now ignore that, sending
the entire build result to the repo. Then when we update the
master repo we create new commits based on the ones from the
builders, but with signatures and the correct parent commit.

This also has the advantage that we can create all the deltas
before we merge the import repo to the main repo.

--- a/master.cfg
+++ b/master.cfg
@@ -331,24 +331,7 @@ def create_build_factory():
                     commands=[
                         shellArg(['mkdir', '-p', 'repo/screenshots']),
                         shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
-                        shellArg(['ostree', '--repo=parent-repo', '--mode=archive-z2', 'init']),
-                        shellArg(['ostree', '--repo=parent-repo', 'remote', 'add', '--gpg-import=flathub.gpg', 'upstream', flathub_upstream_repo]),
                         shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
-                        # set core.parent
-                        shellArg(['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:flathub-id)s/parent-repo')]),
-                        # pull current revision into parent repo
-                        util.ShellArg(logfile='stdio',
-                                      flunkOnFailure=False, # TODO: Instead only do this if this is the first build
-                                      command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
-                                               util.Interpolate('app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:flathub-id)s.Debug/%(prop:flathub-arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:flathub-id)s.Locale/%(prop:flathub-arch)s/' + flathub_branch)]),
-                        util.ShellArg(logfile='stdio',
-                                      flunkOnFailure=False, # TODO: Instead only do this if this is the first build
-                                      command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
-                                               util.Interpolate('runtime/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:flathub-id)s.Debug/%(prop:flathub-arch)s/' + flathub_branch),
-                                               util.Interpolate('runtime/%(prop:flathub-id)s.Locale/%(prop:flathub-arch)s/' + flathub_branch)]),
                         # Add flathub remote
                         util.ShellArg(logfile='stdio',  haltOnFailure=True,
                                       command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
@@ -382,8 +365,6 @@ def create_build_factory():
                 steps.ShellSequence(
                     name='Post-build work',
                     commands=[
-                        # Unset core.parent
-                        shellArg(['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
                         # Copy screenshots
                         shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
                     ])
@@ -401,7 +382,7 @@ def create_build_factory():
                          blocksize=64*1024),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
-                           command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar', 'parent-repo'])
+                           command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar'])
     ])
     return build_factory
 
@@ -426,15 +407,18 @@ update_repo_factory.addSteps([
                              alwaysRun=True),
     steps.ShellSequence(name='Check and prepare repo',
                         commands=[
-        # Fsck repo
+        # Fsck repo we got from builders
         shellArg(['ostree', '--repo=repo', 'fsck']),
-        # Sign commits
-        shellArg(['flatpak', 'build-sign'] + gpg_args +  ['repo']),
+        # Create new repo we will import from
+        shellArg(['ostree', '--repo=import-repo', '--mode=archive-z2', 'init']),
+        shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
+        # Create signed commits in the import repo
+        shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"]),
         # Generate deltas
         util.ShellArg(logfile='stdio', haltOnFailure=True,
-                      command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + ['repo']),
+                      command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + ['import-repo']),
         # Ensure files are readable
-        shellArg(['chmod', '-R', 'a+rX', 'repo'])
+        shellArg(['chmod', '-R', 'a+rX', 'import-repo'])
                             ]),
     steps.ShellSequence(name='Merge to main repo',
                         locks=[repo_lock.access('exclusive')],
@@ -448,7 +432,7 @@ update_repo_factory.addSteps([
                   '--include=/deltas',
                   '--include=/deltas/**',
                   '--exclude=*',
-                  'repo/', flathub_upstream_repo_path + '/']),
+                  'import-repo/', flathub_upstream_repo_path + '/']),
         shellArg(['sync']),
         # rsync refs, after objects are synced
         shellArg(['rsync', '-rltv',
@@ -459,7 +443,7 @@ update_repo_factory.addSteps([
                   '--include=/refs/heads/runtime',
                   '--include=/refs/heads/runtime/**',
                   '--exclude=*',
-                  'repo/', flathub_upstream_repo_path + '/'])
+                  'import-repo/', flathub_upstream_repo_path + '/'])
                         ]),
     steps.ShellCommand(name='Update the repo and generate deltas',
                        command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
